# boardgamegeek-rs

./: Cargo.toml  README.md
src/: client.rs  collection.rs  lib.rs  protocol.rs  result.rs  scraping.rs  thing.rs  xml.rs
src/parsers/: boardgame.rs
tests/: client_test.rs  get_collection_test.rs  get_thing_test.rs
